--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,3 +2,4 @@ username=AIRIZZIO
 password=Diana2013
 mailAddress=airizzio@yandex.ru
 hubUrl=http://192.168.1.67:4444/wd/hub
+subjectOfLetter=Simbirsoft Тестовое задание
